[package]
name = "proxy-textures-easycabinet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }
reqwest = "0.12.22"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
